tools/sddl/assembler/tests/success/push_type_f64be.asm
push.type f64be
halt

