tools/sddl/assembler/tests/fail/push_type_invalid_name.asm
push.type invalid_type
halt

